--- a/src/child.css
+++ b/src/child.css
@@ -2,7 +2,7 @@ h1{
     font-size: 28px;
     color:darkgoldenrod;
     font-family: sans-serif;
-    margin-left: 10px;
+    margin-left: 10px
 }
 h1 span{
     background-color: aliceblue;
